--- a/res/layout/fav_activity.xml
+++ b/res/layout/fav_activity.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/favLayout" >
     
         <com.google.android.gms.ads.AdView android:id="@+id/adView"
         				 xmlns:ads="http://schemas.android.com/apk/res-auto"
