BETA 1.60_3: still can't fix most contacted issue

--- a/res/layout/activity_dialer.xml
+++ b/res/layout/activity_dialer.xml
@@ -33,6 +33,7 @@
 	        android:fontFamily="sans-serif-light"
 	        android:textColor="#FFF"
 	        android:layout_gravity="center"
+	        android:singleLine="true"
 	        android:gravity="center"
 	        android:textSize="40sp" />
         
